# Aurora-C

./: .cproject  .gdbinit  .gitignore  .gitmodules  .project  AuroraC Debug.launch  AuroraC Release.launch  AuroraC ReleaseWithDebug.launch  AuroraC.exe.stackdump  AuroraC.launch  CMakeLists.txt  README.md  RefurekuSettings.toml  TODO.txt  log.error  log4j.xml
assets/: log4j.xml
assets/shaders/: circle.frag  disk.frag  disk.vert  shader.frag  shader.vert  strategic.frag  strategic.vert
cache/shaders/: shader.frag.spv  shader.vert.spv
cmake/: FindLog4Cxx.cmake  OptimizeForArchitecture.cmake  Toolchain-cygwin.cmake  Toolchain-mingw-clang.cmake  Toolchain-mingw-gcc.cmake  Toolchain-mingw32-clang.cmake  Toolchain-mingw32-gcc.cmake  Toolchain-mingw32.cmake  Toolchain-visualstudio.cmake
docs/: TODO.txt  lore.txt
gensrc/: Refureku.cpp  RefurekuSettings.toml
lib/: CMakeLists.txt
src/: .gitignore  Aurora.hpp  AuroraC.cpp  AuroraGame.kt  PreCompileHeader.h
src/galaxy/: Buildings.hpp  Commands.cpp  Commands.hpp  Empire.cpp  Empire.hpp  Empire.kt  Galaxy.cpp  Galaxy.hpp  Galaxy.kt  MunitionHull.cpp  MunitionHull.hpp  Player.cpp  Player.hpp  Player.kt  Resources.hpp  ShadowGalaxy.cpp  ShipHull.cpp  ShipHull.hpp  ShipHull.kt  ShipHullClass.hpp  ShipParts.cpp  ShipParts.hpp  ShipParts.kt
src/network/: Network.cpp  Network.hpp
src/starsystems/: CustomSystemInvocationStrategy.kt  IntervalSystems.kt  ProfilingSystemInvocationStrategy.kt  ShadowStarSystem.cpp  ShadowStarSystem.hpp  StarSystem.cpp  StarSystem.hpp  StarSystem.kt  StarSystemShadow.cpp  StarSystemShadow.hpp
src/starsystems/components/: CargoComponent.cpp  CargoComponent.hpp  ColonyComponents.cpp  ColonyComponents.hpp  ColonyComponents.kt  Components.hpp  HealthComponents.hpp  IDComponents.cpp  IDComponents.hpp  IDComponents.kt  MiscComponents.hpp  MovementComponents.hpp  MovementComponents.kt  MunitionComponent.kt  MunitionComponents.hpp  OrbitComponent.kt  PartStatesComponent.hpp  PowerComponent.hpp  PowerComponent.kt  SensorComponents.hpp  SensorsComponent.kt  ShipComponent.hpp  ShipComponent.kt  SimpleComponents.hpp  SimpleComponents.kt  StrategicIconComponent.hpp  TimedComponents.hpp  TimedComponents.kt  WeaponComponents.kt
src/starsystems/events/: PooledFastEventDispatcher.java  events.kt
src/starsystems/systems/: ColonySystem.cpp  ColonySystem.kt  MovementPredictedSystem.kt  MovementSystem.cpp  MovementSystem.kt  OrbitSystem.cpp  OrbitSystem.kt  PowerSystem.kt  Scheduler.hpp  ShipSystem.kt  SolarIrradianceSystem.kt  SpatialPartitioningPlanetoidsSystem.cpp  SpatialPartitioningPlanetoidsSystem.kt  SpatialPartitioningSystem.cpp  SpatialPartitioningSystem.kt  Systems.hpp  TargetingSystem.kt  TimedLifeSystem.kt  WeaponSystem.cpp  WeaponSystem.kt  scheduler.hpp
src/ui/: AuroraWindow.cpp  AuroraWindow.hpp  EmpireOverviewPostLayer.cpp  EmpireOverviewPostLayer.hpp  ImGuiLayer.cpp  ImGuiLayer.hpp  KeyMappings.cpp  KeyMappings.hpp  MainDebugWindow.cpp  RenderCache.cpp  RenderCache.hpp  ShaderTestLayer.cpp  ShaderTestLayer.hpp  StarSystemLayer.cpp  StarSystemLayer.hpp  UILayer.cpp  UILayer.hpp  UIWindow.hpp  imgui_impl_glfw.cpp
src/ui/imgui/: ColonyManagerWindow.cpp  ColonyManagerWindow.hpp  EmpireOverviewWindow.cpp  EmpireOverviewWindow.hpp  ImGuiDemoWindow.hpp  ImGuiLayer.cpp  ImGuiLayer.hpp  MainDebugWindow.cpp  MainDebugWindow.hpp  ProfilerWindow.cpp  ProfilerWindow.hpp  ResearchWindow.cpp  ResearchWindow.hpp  ShipDebugWindow.cpp  ShipDebugWindow.hpp  ShipDesignerWindow.cpp  ShipDesignerWindow.hpp  TopBarWindow.cpp  TopBarWindow.hpp  UIWindow.hpp  imgui_impl_glfw.cpp  imgui_impl_glfw.h
src/ui/imgui/widgets/: PieMenu.cpp  PieMenu.h
src/ui/shaderAPI/: ShaderAPI.cpp  ShaderAPI.hpp
src/ui/shaders/: Shaders.cpp  Shaders.hpp
src/ui/starsystem/: StarSystemDebugLayer.cpp  StarSystemDebugLayer.hpp  StarSystemInputLayer.cpp  StarSystemInputLayer.hpp  StarSystemLayer.cpp  StarSystemLayer.hpp  StarSystemRenderLayer.cpp  StarSystemRenderLayer.hpp  StarSystemStatusLayer.cpp  StarSystemStatusLayer.hpp
src/utils/: Bag.hpp  BitVector.cpp  BitVector.hpp  Format.hpp  FreeList.hpp  GameServices.hpp  GameServices.kt  GameUtils.kt  ImGuiUtils.cpp  ImGuiUtils.hpp  Math.cpp  Math.hpp  Profiling.cpp  Profiling.hpp  Random.cpp  Random.h  RenderUtils.cpp  RenderUtils.hpp  SmallList.hpp  Units.java  Utils.cpp  Utils.hpp  Vector2D.java  Vector2L.java  constexpr.h  dbg.h  enum.h
src/utils/pathfinding/: GridPathfinder.cpp  GridPathfinder.hpp
src/utils/quadtree/: LooseGrid.cpp  LooseGrid.hpp  QuadTree.cpp  QuadTree.hpp  QuadTreeAABB.cpp  QuadTreeAABB.hpp  QuadTreeAABB2.cpp  QuadTreeAABB2.hpp  QuadTreePoint.cpp  QuadTreePoint.hpp  SmallList.hpp  SmallList2.hpp
src/utils/quadtree/intlist-based/: IntList.c  Quadtree.c
